# Obsidian

./: .gitignore  IMPROVEMENTS.md  README.md  requirements.txt
ai/: llm_engine.cpp  nlp_processor.cpp  vision_api.cpp  voice_assistant.cpp
bootloader/: boot.asm
docs/: ARCHITECTURE.md
drivers/: display.c  keyboard.c
filesystem/: obsidianfs.c
gui/: gui_server.c
kernel/: kernel.h  main.c  memory.c  process.c  scheduler.c  syscalls.c
scripts/: grub.cfg
shell/: Cargo.toml
shell/src/: main.rs
tests/: test_kernel.c
