[package]
name = "obsidian-shell"
version = "0.1.0"
edition = "2021"
authors = ["Akshay Kale <kaleakshay8856@gmail.com>"]
description = "AI-powered shell for Obsidian OS"
license = "MIT"

[dependencies]
# Core Rust dependencies
tokio = { version = "1.0", features = ["rt", "macros", "time", "sync", "mio", "fs", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Terminal and UI
crossterm = "0.27"
tui = { version = "0.19", optional = true }
ratatui = { version = "0.24", optional = true }

# Async and networking
reqwest = { version = "0.11", features = ["json"] }
websocket = "0.26"

# File system and process management
walkdir = "2.3"
glob = "0.3"
which = "5.0"

# AI and ML integration
tch = "0.13"  # PyTorch bindings
tokenizers = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"
lazy_static = "1.4"

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = ["ai", "gui"]
ai = []
gui = ["tui", "ratatui"]